--- a/src/views/Home/Home.module.css
+++ b/src/views/Home/Home.module.css
@@ -1,3 +1,8 @@
-.content {
-    background-color: orange;
+.leftNav {
+    padding: 30px;
+}
+.leftNav a {
+    font-size: 1.3rem;
+    padding: 5px 0;
+    color: black;
 }
