--- a/src/views/Home/Home.module.css
+++ b/src/views/Home/Home.module.css
@@ -6,3 +6,87 @@
     padding: 5px 0;
     color: black;
 }
+.form {
+    padding: 10px;
+    border-radius: 4px;
+    width: 60%;
+    margin: 20px auto;
+    background-color: #f5f5f5;
+}
+.form input {
+    padding: 10px 20px;
+    margin-bottom: 10px;
+    width: 100%;
+    font-size: 17px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+}
+.form input:focus {
+    outline: none;
+    border: 1px solid #66AF33;
+}
+.inputSubmit {
+    width: 100%;
+    background: #66AF33;
+    border: none;
+    border-radius: 2px;
+    box-shadow: none;
+    color: #FFFFFF;
+    height: 50px;
+    margin-bottom: 10px;
+    opacity: 0.9;
+    -webkit-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
+}
+
+.inputSubmit:focus,
+.inputSubmit:hover {
+    background: #FFFFFF;
+    color: #66AF33;
+    box-shadow: none;
+    outline: none;
+    border: 1px solid #66AF33;
+}
+.form textarea {
+    padding: 10px 20px;
+    margin-bottom: 10px;
+    height: 200px;
+    width: 100%;
+    font-size: 17px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+}
+.form textarea:focus {
+    outline: none;
+    border: 1px solid #66AF33;
+}
+.form select {
+    padding: 10px 20px;
+    margin-bottom: 10px;
+    height: 40px;
+    width: 100%;
+    font-size: 17px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 0;
+}
+.form select:focus {
+    outline: none;
+    border: 1px solid #66AF33;
+}
+
+
+@media (max-width: 800px) {
+	.form {
+        width: 90%;
+  }
+}
